--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-age = input("What is your current age?")
+age = input("What is your current age?\n")
 days = (90 - int(age)) * 365
 weeks = (90 - int(age)) * 52
 months = (90 - int(age)) * 12
-print(f"You have {days} days, {weeks} weeks, and {months} months left.")
+print(f"You have {days} days, which is {weeks} weeks, which is {months} months left.")
